Septima version de java a kotlin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="reingresar_contrase_a">Reingresar contraseña</string>
     <string name="crear_cuenta">Crear cuenta</string>
     <string name="ya_tienes_una_cuenta">Ya tienes una cuenta??</string>
+    <string name="enter_your_">Ingresar nombre</string>
 
 </resources>
